add version for list logs by project
