# api/src/controllers/log.controller.ts
@@ -1,10 +1,11 @@
-import { JsonController, HeaderParam, Post, Get, Body, Param} from 'kiwi-server';
+import { JsonController, HeaderParam, Post, Get, Body, Param, Authorize} from 'kiwi-server';
 import { ProjectService } from '../services/project.service';
 import { Log } from '../sdk/logs';
 import { Response } from '../sdk/response';
 import { ResponseCode, levels } from '../sdk/constants';
 import { environment } from '../../environments/environment';
 import { LogService } from '../services/log.service';
+import { LogIn, LogListIn } from '../models/log.models';
 
 @JsonController('/log')
 export class LogController {
@@ -12,7 +13,7 @@ export class LogController {
   constructor(private projectSvc: ProjectService, private logSvc: LogService) {}
 
   @Post('/:level')
-  public async log_info(@Body() body: any, @HeaderParam('apikey') apikey: string, @Param('level') level:string){
+  public async log_info(@Body() body: LogIn, @HeaderParam('apikey') apikey: string, @Param('level') level:string){
     try {
       if(!levels.includes(level)){
         return new Response(ResponseCode.ERROR, `Level ${level} is incorrect`);
@@ -25,6 +26,22 @@ export class LogController {
       return new Response(ResponseCode.OK, '');
     } catch (err) {
       Log.error(`log/${level}`, err);
+      return new Response(ResponseCode.ERROR, environment.common.genericErrorMessage);
+    }
+  }
+
+  @Authorize()
+  @Post('/project/:project')
+  public async list(@Body() body: LogListIn, @Param('project') project_id: string){
+    try {
+      const project = await this.projectSvc.getById(project_id);
+      if(!project){
+        return new Response(ResponseCode.ERROR, `Project ${project_id} doesnt exists`);
+      }
+      const logs = await this.logSvc.list(body, project_id);
+      return new Response(ResponseCode.OK, '', logs);
+    } catch (err) {
+      Log.error(`log/project/${project_id}`, err);
       return new Response(ResponseCode.ERROR, environment.common.genericErrorMessage);
     }
   }
