# api/src/models/log.models.ts
@@ -1,0 +1,11 @@
+import { IsString, IsEmail } from 'kiwi-server';
+
+export class LogIn{
+  @IsString() message: string;
+  @IsString() stackTrace: string;
+}
+
+export class LogListIn{
+  @IsString() page: number;
+  @IsString() size: number;
+}
